tinc/iptables
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT

*filter

:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

-A INPUT -p tcp --sport 655 -j ACCEPT
-A INPUT -p tcp --dport 655 -j ACCEPT
-A OUTPUT -p tcp --sport 655 -j ACCEPT
-A OUTPUT -p tcp --dport 655 -j ACCEPT

-A INPUT -p udp --sport 655 -j ACCEPT
-A INPUT -p udp --dport 655 -j ACCEPT
-A OUTPUT -p udp --sport 655 -j ACCEPT
-A OUTPUT -p udp --dport 655 -j ACCEPT

-A INPUT -s 82.218.89.112/29 -j ACCEPT
-A INPUT -s 10.100.150.1    -j ACCEPT

-A INPUT  -p gre -s 95.172.31.120 -j ACCEPT
-A OUTPUT -p gre -d 95.172.31.120 -j ACCEPT

#-A INPUT -p tcp -m state --state NEW -m tcp --dport 20 -j ACCEPT
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT
#-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT

-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited

-A FORWARD -s 10.100.100.0/23 -j ACCEPT
-A FORWARD -d 10.100.100.0/23 -j ACCEPT
-A FORWARD -s 10.100.101.0/24 -j ACCEPT
-A FORWARD -d 10.100.101.0/24 -j ACCEPT
-A FORWARD -s 10.100.150.0/24 -j ACCEPT
-A FORWARD -d 10.100.150.0/24 -j ACCEPT

-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

COMMIT
